--- a/css-transition/css/style.css
+++ b/css-transition/css/style.css
@@ -89,3 +89,74 @@ transition: 0.3s ease all;
 .delayed:hover h3 {
     transform: translateX(100px);
 }
+/*profilebox*/
+.profile-box{
+    height: 300px;
+    width: 300px;
+    margin: 0 auto 30px;
+    position: relative;
+    border-radius: 4px;
+    overflow: hidden;
+    transition: 0.3s ease all;
+}
+.profile-box:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+}
+.profile-box img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: block;
+    border-radius: 4px;
+    transition: 1s ease all;
+}
+.profile-box:hover img{
+    transform: scale(1.5);
+}
+.profile-box .box-content{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
+    padding: 20px 20px 0px;
+    background: rgba(0,0,0,0.5);
+    color:#fff;
+    transition: 0.3s ease all;
+
+}
+.profile-box:hover .box-content{
+    padding-bottom: 40px;
+    padding-top:40px;
+}
+.profile-box .box-content h3{
+    margin-bottom: 15px;
+}
+.profile-box .social-links{
+    list-style:none;
+    padding: 0;
+    margin: 0;
+    
+}
+.profile-box .social-links li{
+    width: 15px;
+    height: 15px;
+    background: #EFEFEF;
+    display: inline-block;
+    margin-right: 4px;
+    border-radius: 50%;
+    transition: 0.3 ease all;
+    transform: translateY(100px);
+}
+.profile-box .social-links li:nth-child(2){
+    transition-delay: 0.25s;
+}
+.profile-box .social-links li:last-child{
+    transition-delay: 0.50s;
+}
+.profile-box:hover .social-links li{
+    transform: none;
+}
